--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,6 @@
   --title-text-color: #757575;
   --accent-color: #2196f3;
   --noactive-button: #f5f4fa;
-  --active-bg-button: #2196f3;
-  --activ-text-button-color: #ffffff;
   --accent-white-color: #ffffff;
 }
 body {
@@ -78,9 +76,9 @@ header {
   text-transform: uppercase;
 }
 .hero .button {
-  background-color: var(--active-bg-button);
-  color: var(--activ-text-button-color);
-  border: 1px solid var(--active-bg-button);
+  background-color: var(--accent-color);
+  color: var(--accent-white-color);
+  border: 1px solid var(--accent-color);
   border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
@@ -92,6 +90,15 @@ header {
 .hero .button:focus {
   background-color: #188ce8;
   cursor: pointer;
+}
+/*main*/
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 /*features*/
 
@@ -109,14 +116,7 @@ header {
 }
 
 /*we-do*/
-.we-do h2,
-.team h2 {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  color: var(--primary-text-color);
-}
+
 .we-do img {
   width: 370px;
 }
@@ -128,11 +128,18 @@ header {
 .team img {
   width: 270px;
 }
-.team h3,
-.team p {
+.team h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  /*text-align: center;*/
+}
+
+.team p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  /*text-align: center;*/
 }
 .team p {
   color: var(--title-text-color);
@@ -140,27 +147,24 @@ header {
 
 /* for second page*/
 
-.filters .button {
-  list-style: none;
+.portfolio button {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
-  /* identical to box height, or 162% */
-}
-.filters button {
+  list-style: none;
   cursor: pointer;
   background-color: var(--noactive-button);
   color: var(--primary-text-color);
   text-decoration: none;
-  font-family: inherit;
   border-radius: 4px;
   border: none;
 }
-.filters button:hover,
-.filters button:focus {
-  background-color: var(--active-bg-button);
-  color: var(--activ-text-button-color);
+.portfolio button:hover,
+.portfolio button:focus {
+  background-color: var(--accent-color);
+  color: var(--accent-white-color);
 
   /*text-shadow: ;*/
 }
@@ -199,4 +203,8 @@ header {
 .list a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+}
+.footer a:hover,
+.footer a:focus {
+  color: var(--accent-color);
 }
