--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --accent-white-color: #ffffff;
 }
 body {
+  margin: 0;
   background-color: var(--primary-bg-color);
   font-family: Roboto, sans-serif;
   font-size: 14px;
@@ -13,28 +14,62 @@ body {
 }
 
 .list {
+  padding: 0; /*то само додала для .auth*/
+  margin: 0; /*то само додала для .auth*/
   list-style: none; /*для всех, у кого есть class="list"*/
+}
+.list img {
+  display: block;
 }
 
 /*header*/
+header {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  border: 1px solid #ececec;
+}
 .logo {
   color: #000000;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+
+  margin-left: auto;
 }
 .logo-web {
   color: var(--accent-color);
 }
-header {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+.header {
+  display: flex;
+  align-items: center;
 }
+.nav {
+  display: flex;
+  margin-left: 93px;
+}
+.nav .item {
+  margin-right: 50px;
+}
+.nav .item:last-child {
+  margin-right: 0;
+}
+
 .header a {
   text-decoration: none;
+}
+.nav .list {
+  /* не працює */
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .nav.list a {
   color: var(--primary-text-color);
@@ -43,20 +78,31 @@ header {
 .nav a:focus {
   color: var(--accent-color);
 }
-
 .nav .list.current {
   color: var(--accent-color);
   background-color: var(--accent-white-color);
 }
-.auth-list {
+
+.auth {
+  padding: 0;
+  margin-left: 331px;
+  display: flex;
+}
+
+.auth-nav {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
-.auth-list a {
+.auth-nav .link {
   text-decoration: none;
   color: var(--title-text-color);
 }
-.auth a:hover,
-.auth a:focus {
+.auth .auth-nav + .auth-nav {
+  margin-left: 50px;
+}
+.auth .link:hover,
+.auth .link:focus {
   color: var(--accent-color);
 }
 
@@ -69,6 +115,8 @@ header {
   background-color: #2f303a;
 }
 .hero h1 {
+  margin-top: 0;
+  margin-bottom: 40px; /*не можу точно визначити відступи*/
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -92,7 +140,21 @@ header {
   cursor: pointer;
 }
 /*main*/
+/*features*/
+.features .we-do .team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.features {
+  flex-wrap: wrap;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .section-title {
+  margin-top: 50px; /* питання?*/
+  margin-bottom: 94px; /*питання?*/
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -100,9 +162,32 @@ header {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-/*features*/
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/*флекс-контейнер для всіх трьох розділів*/
+.container .list {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.features-item {
+  width: 270px;
+  margin-right: 30px;
+}
+.features-item:nth-child(4n) {
+  margin-right: 0;
+}
+.features-item:nth-last-child(-n + 4) {
+  margin-bottom: 0;
+}
 .features-title {
+  margin-top: 0;
+  margin-bottom: 10px;
   color: var(--primary-text-color);
   font-size: 14px;
   font-weight: 700;
@@ -110,21 +195,42 @@ header {
   text-transform: uppercase;
 }
 .features-text {
+  margin-top: 0;
+  margin-bottom: 0;
   line-height: 1.71;
   font-size: 14px;
   color: var(--title-text-color);
 }
 
 /*we-do*/
-
+.we-do-item {
+  width: 370px;
+  margin-right: 30px;
+}
+.we-do-item:nth-child(3n) {
+  margin-right: 0;
+}
+.we-do-item:nth-last-child(-n + 4) {
+  margin-bottom: 0;
+}
 .we-do img {
   width: 370px;
 }
+
 /*team*/
 .team {
   background-color: #f5f4fa;
 }
-
+.team-item {
+  width: 270px;
+  margin-right: 30px;
+}
+.team-item:nth-child(4n) {
+  margin-right: 0;
+}
+.team-item:nth-last-child(-n + 4) {
+  margin-bottom: 0;
+}
 .team img {
   width: 270px;
 }
@@ -132,22 +238,38 @@ header {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  /*text-align: center;*/
 }
 
 .team p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
-  /*text-align: center;*/
 }
 .team p {
   color: var(--title-text-color);
 }
 
 /* for second page*/
+.main-container {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+.project {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-.portfolio button {
+.portfolio-button {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 34px;
+}
+
+.project button {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -160,19 +282,36 @@ header {
   text-decoration: none;
   border-radius: 4px;
   border: none;
+  margin-right: 8px;
+  padding: 6px 22px;
 }
-.portfolio button:hover,
-.portfolio button:focus {
+.project button:hover,
+.project button:focus {
   background-color: var(--accent-color);
   color: var(--accent-white-color);
-
   /*text-shadow: ;*/
+}
+
+.portfolio.list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio.list li {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio.list li:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio.list li:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 .portfolio.list a {
   text-decoration: none;
 }
-.portfolio img {
-  width: 370px;
+.item-text {
+  margin: 20px 24px;
 }
 .portfolio.list h2 {
   color: var(--primary-text-color);
@@ -186,7 +325,9 @@ header {
   font-size: 16px;
   line-height: 1.88;
 }
-
+.portfolio-item {
+  border: 1px solid #eeeeee;
+}
 /*footer*/
 .footer {
   background-color: #2f303a;
